# nova3d

./: Cargo.toml  README.md  WORKFLOW.md
.github/workflows/: ci.yml
examples/: spinning_cube.rs
src/: camera.rs  lib.rs  mesh.rs  render.rs
src/io/: mod.rs  ppm.rs
src/math/: mat4.rs  mat4.rs.backup.20260712_000200  mod.rs  quat.rs  vec3.rs  vec3.rs.backup.20260712_001824
src/raster/: framebuffer.rs  mod.rs  triangle.rs
src/scene/: graph.rs  mod.rs  transform.rs
tests/: mat4.rs  mat4.rs.backup.20260712_000000  mat4.rs.backup.20260712_000100  mat4.rs.backup.20260712_000200  quat.rs  quat.rs.backup.20260712_002500  quat.rs.backup.20260712_002600  quat.rs.backup.20260712_002700  vec3.rs
