[package]
name = "nova3d"
version = "0.1.0"
edition = "2021"
description = "A CPU-first 3D engine built incrementally: math core, scene graph, software rasterizer"
license = "MIT"

[dependencies]

# Library crate root lives in src/mesh.rs so the spinning_cube example can share
# the same owned source file (capability: Create examples/spinning_cube).
[lib]
path = "src/mesh.rs"

[[example]]
name = "spinning_cube"
path = "src/mesh.rs"

[profile.release]
opt-level = 3
